<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_movie_menu"
        android:checked="true"
        android:icon="@drawable/ic_movie"
        android:title="@string/movie" />

    <item
        android:id="@+id/nav_tv_menu"
        android:icon="@drawable/ic_tv"
        android:title="@string/tv_series" />
    <item
        android:id="@+id/nav_fav_menu"
        android:icon="@drawable/ic_favorite_menu"
        android:title="@string/favorite_menu" />

</menu>
