<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add_fav"
        android:icon="@drawable/ic_favorite_border"
        android:title="@string/favorite_menu"
        app:showAsAction="ifRoom" />
</menu>